--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,3 @@
 <h1>home page</h1>
+<p>If you are an existing user <%= link_to "sign-in here", new_sessions_path %></p>
+<p>If you are a new user <%= link_to "sign-up here", new_user_path %></p>
