pending delivery-view and mark delivered added

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -13,3 +13,13 @@
     margin: 5px;
     display: none;
 }
+.Items-main{
+    display: flex;
+    font-family: sans-serif;
+    
+    
+    
+}
+.Cart-main{
+    padding-left: 50px;
+}
