--- a/app/views/menus/owner_view.html.erb
+++ b/app/views/menus/owner_view.html.erb
@@ -1,4 +1,5 @@
 <section>
+    <h1>Create new menu<h1>
     <%= form_with(url: "/menus" , method: "post") do %> 
     <input type="text" value="Name" name="name">
     
@@ -7,12 +8,22 @@
 </section>
 
 <section>
+    <h1>Available menus</h1>
     <% Menu.all.each do |item|%>
     <li>
     <div class="Items-container">
     <div class="Items-content"><%= form_with(url: "menus/#{item.id}/menu_items" , method: "get") do %>
             <input type="submit" value="<%= item.name%>" onclick="this.form.submit()">
     
+        <% end %>
+    </div>
+    <div class="Items-content">Enable Menu to Customers:
+        <%= form_with(url: "/menus/#{item.id}" , method: "put") do %>
+            <input 
+                type="checkbox" 
+                name="enabled" <%= item.enabled ? "checked" : ""%>
+                onclick="this.form.submit()"
+            />
         <% end %>
     </div>
     <div class="Items-content"><%= form_with(url: "menus/#{item.id}" , method: "delete") do %>
