owner persona- functionalities added

--- a/app/views/owner/owner_home.html.erb
+++ b/app/views/owner/owner_home.html.erb
@@ -1,6 +1,6 @@
 <div>
     <div><%= link_to "Manage Menu ", menus_path %> </div>
     <div>Reports </div>
-    <div>Manage Users</div>
+    <div><%= link_to "Manage All Users" , manage_all_users_url%></div>
     <div><%= link_to "Deliver Orders", deliver_orders_path %></div>
 </div>
