clerk persona-added

--- a/app/views/manage_all_users/home.html.erb
+++ b/app/views/manage_all_users/home.html.erb
@@ -1,5 +1,5 @@
 <div>
     <div><%= link_to "All Users", all_users_url%></div>
-    <div><%= link_to "Manage Clerks", %></div>
-    <div><%= link_to "Manage Owners", %></div>
+    <div><%= link_to "Manage Clerks",manage_clerks_path %></div>
+    <div><%= link_to "Manage Owners", manage_owners_path%></div>
 </div>
