--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <h1>home page</h1>
 <p>If you are an existing user <%= link_to "sign-in here", new_sessions_path %></p>
 <p>If you are a new user <%= link_to "sign-up here", new_user_path %></p>
+<p>owner signin <%= link_to "sign-in" , new_owner_session_path%></p>
