--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <% if @current_user && @current_cart %>
+    <% if @current_user %>
       <p>welcome <%= @current_user.name%></p>
       <%= link_to "Sign-out", destroy_session_path ,method:"delete"%>
     <% end %>
