--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,8 @@
-<h1>home page</h1>
-<p>If you are an existing user <%= link_to "sign-in here", new_sessions_path %></p>
-<p>If you are a new user <%= link_to "sign-up here", new_user_path %></p>
+<section>
+<h1>Cafeteria</h1>
+<p>If you are an existing user </p>
+<a><%= link_to "sign-in here", new_sessions_path %></a>
+<p>If you are a new user</p> 
+<a><%= link_to "sign-up here", new_user_path %></a>
 <p>owner signin <%= link_to "sign-in" , new_owner_session_path%></p>
+</section>
