home page css and validation for user,cartitem added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
-<section>
-<h1>Cafeteria</h1>
-<p>If you are an existing user </p>
-<a><%= link_to "sign-in here", new_sessions_path %></a>
-<p>If you are a new user</p> 
-<a><%= link_to "sign-up here", new_user_path %></a>
-<p>owner signin <%= link_to "sign-in" , new_owner_session_path%></p>
+<section class="Main-box"> 
+<h1 class="Content-heading">Cafeteria</h1>
+<p class="Content">If you are an existing user </p>
+<p class="Content-link"><%= link_to "sign-in here", new_sessions_path %></p>
+<p class="Content">If you are a new user</p> 
+<p class="Content-link"><%= link_to "sign-up here", new_user_path %></p>
+<p class="Content">owner signin <%= link_to "sign-in" , new_owner_session_path%></p>
 </section>
