--- a/app/views/customers/menu.html.erb
+++ b/app/views/customers/menu.html.erb
@@ -23,7 +23,7 @@
 </section>
 <section class="Cart-main">
     <h1>Cart Items</h1>
-    <% CartItem.where(cart_id: @current_cart.id).each do |cart_item| %>
+    <% @current_cart_items.each do |cart_item| %>
     <li class="Items-container">
     <div class="Items-content">
        <%= cart_item.menu_item_name%>
