--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<section class="Main-box"> 
+<section class="Main-box Shadow"> 
 <h1 class="Content-heading">Cafeteria</h1>
 <p class="Content">If you are an existing user </p>
 <p class="Content-link"><%= link_to "sign-in here", new_sessions_path %></p>
