--- a/app/views/manage_all_users/home.html.erb
+++ b/app/views/manage_all_users/home.html.erb
@@ -1,5 +1,7 @@
-<div>
-    <div><%= link_to "All Users", all_users_url%></div>
-    <div><%= link_to "Manage Clerks",manage_clerks_path %></div>
-    <div><%= link_to "Manage Owners", manage_owners_path%></div>
-</div>
+<section >
+    <h1 class="Content-heading">Cafeteria</h1>
+    <%= link_to "All Users", all_users_url, :class => "Option Shadow"%>
+    <%= link_to "Manage Clerks",manage_clerks_path , :class => "Option Shadow"%>
+    <%= link_to "Manage Owners", manage_owners_path , :class => "Option Shadow"%>
+
+</section>
