--- a/app/views/clerks/home.html.erb
+++ b/app/views/clerks/home.html.erb
@@ -1,3 +1,5 @@
-<h1>Clerk Home</h1>
-<%= link_to "place orders" , customers_path%>
-<%= link_to "deliver orders" , deliver_orders_path%>
+<section>
+<h1 class="Content-heading">Cafeteria</h1>
+<%= link_to "place orders" , customers_path , :class => "Option Shadow"%>
+<%= link_to "deliver orders" , deliver_orders_path , :class => "Option Shadow"%>
+</section>
