--- a/app/views/manage_clerks/edit_clerk.html.erb
+++ b/app/views/manage_clerks/edit_clerk.html.erb
@@ -1,6 +1,6 @@
-<h3>Edit Items</h3>
-<section>
 
+<section class="Main-box Shadow">
+<h3 class="Hilight">Edit Clerk Details</h3>
 <%= form_with(url: "/manage_clerks/#{@clerk.id}"  , method: "put") do %> 
    
     <input type="text" value="<%= @clerk.name%>" name="name">
@@ -10,6 +10,6 @@
     
 <% end %>
 
-<%= link_to "Delete" , manage_clerk_path(:id => @clerk.id) , :method => :delete %>
+<br><%= link_to "Delete" , manage_clerk_path(:id => @clerk.id) , :method => :delete ,:class =>"Content-link" %>
 
 </section>
