--- a/app/views/manage_owners/edit_owner.html.erb
+++ b/app/views/manage_owners/edit_owner.html.erb
@@ -1,6 +1,6 @@
-<h3>Edit Owner</h3>
-<section>
 
+<section class="Main-box Shadow"> 
+<h3 class="Hilight">Edit Owner</h3>
 <%= form_with(url: "/manage_owners/#{@owner.id}"  , method: "put") do %> 
    
     <input type="text" value="<%= @owner.name%>" name="name">
@@ -10,6 +10,6 @@
     
 <% end %>
 
-<%= link_to "Delete" , manage_owner_path(:id => @owner.id) , :method => :delete %>
+<br><%= link_to "Delete" , manage_owner_path(:id => @owner.id) , :method => :delete , :class => "Content-link"%>
 
 </section>
