--- a/app/views/owner_session/owner_signin.html.erb
+++ b/app/views/owner_session/owner_signin.html.erb
@@ -1,11 +1,11 @@
-<h1>Owner - Sign in</h1>
-<section>
-<%= form_with url: owner_session_path do |form|%>
-    <p>Email:</p>
-    <%= form.email_field :email %>
-    <p>Password</p>
-    <%= form.password_field :password %><br>
-    <%= form.submit "Sign-In" %>
 
-<% end %>
+<section class="Form-main">
+<h1 class="Content-heading">Owner - Sign in</h1>
+    <%= form_with url: owner_session_path do |form|%>
+        <p class="Content-form">Email:</p>
+        <%= form.email_field :email %>
+        <p class="Content-form">Password</p>
+        <%= form.password_field :password %><br><br>
+        <p class="Content-button"><%= form.submit "Sign-In" %></p>
+    <% end %>
 </section>
