--- a/app/views/place_orders/confirm_order.html.erb
+++ b/app/views/place_orders/confirm_order.html.erb
@@ -1,19 +1,26 @@
 
 
-<section class="Cart-main">
-    <h1>Cart Items</h1>
+<section class="Order Shadow">
+    <h1 class="Content-heading">Your Cart</h1>
+    <table>
+    <tr>
+        <th class="Cart-item">Cart Item</th>
+        <th class="Cart-item">Price</th>
+        <th class="Cart-item">Quantity</th>
+    </tr>
     <% CartItem.where(cart_id: @current_cart.id).each do |cart_item| %>
-    <li class="Items-container">
-    <div class="Items-content">
-       <%= cart_item.menu_item_name%>
-       <%= (cart_item.menu_item_price)*cart_item.menu_item_quantity%>
+    <tr >
+    <div >
+      <td class="Cart-item"> <%= cart_item.menu_item_name%> </td>
+        <td class="Cart-item"><%= (cart_item.menu_item_price)*cart_item.menu_item_quantity%></td>
      
-    <%= cart_item.menu_item_quantity%>
+    <td class="Cart-item"><%= cart_item.menu_item_quantity%></td>
     
     </div>
-    </li>
+    </tr>
     <% end %>
-    Cart Total = <%= @total%><br>
-    <%= button_to "Place Order", place_orders_path , :confirm => "Are you sure?", :controller=>"place_orders", :method => "post" %>
+    </table>
+    <p class="Hilight">Cart Total = <%= @total%></p>
+    <%= button_to "Confirm Order", place_orders_path , :confirm => "Are you sure?", :controller=>"place_orders", :method => "post" %>
    
 </section>
