--- a/app/views/menus/owner_view.html.erb
+++ b/app/views/menus/owner_view.html.erb
@@ -10,7 +10,7 @@
 <section class="Main-box Shadow">
     <h1 class="Hilight">Available Menu Categories</h1>
     <table>
-    <% Menu.all.each do |item|%>
+    <% @menus.each do |item|%>
     <tr>
     <div >
     <td class="Table-item">
