--- a/app/assets/stylesheets/my_app.css
+++ b/app/assets/stylesheets/my_app.css
@@ -70,17 +70,17 @@ input[type=submit]{
     text-align: center;
     background-color: #ff9e22;
     color: rgb(255, 255, 255);
-    
+   
     width:200px;
     padding: 5px;
     margin-top:10px;
 }
 .Content-button{
     text-align: center;
-    
+    background-color: #ff9e22;
     color: rgb(255, 255, 255);
     margin: auto;
-    width:100px;
+    width:150px;
     border-radius: 25px;
 }
 .Menu-page{
