--- a/app/views/place_orders/confirm_order.html.erb
+++ b/app/views/place_orders/confirm_order.html.erb
@@ -8,7 +8,7 @@
         <th class="Cart-item">Price</th>
         <th class="Cart-item">Quantity</th>
     </tr>
-    <% CartItem.where(cart_id: @current_cart.id).each do |cart_item| %>
+    <% @cart_items.each do |cart_item| %>
     <tr >
     <div >
       <td class="Cart-item"> <%= cart_item.menu_item_name%> </td>
