--- a/app/views/owner_session/owner_signin.html.erb
+++ b/app/views/owner_session/owner_signin.html.erb
@@ -6,6 +6,6 @@
         <%= form.email_field :email %>
         <p class="Content-form">Password</p>
         <%= form.password_field :password %><br><br>
-        <p class="Content-button"><%= form.submit "Sign-In" %></p>
+        <p><%= form.submit "Sign-In" %></p>
     <% end %>
 </section>
