--- a/app/views/reports/invoive.html.erb
+++ b/app/views/reports/invoive.html.erb
@@ -6,13 +6,13 @@
     <th class="Table-item">Email</th>
     <th class="Table-item">Order ID</th>
     <th class="Table-item">Order Date</th>
-    <th class="Table-item">Delivered</th>
+    <th class="Table-item">Delivery Date</th>
 </tr>
 <tr><td class="Table-item"><%= @user.name%></td>
 <td class="Table-item"><%= @user.email%></td>
 <td class="Table-item"><%= @order.id%></td>
 <td class="Table-item"><%= @order.date%></td>
-<td class="Table-item"><%= @order.order_delivered%></td>
+<td class="Table-item"><%= @order.delivered_on%></td>
 </tr>
 </table>
 </section>
