--- a/app/views/reports/_results.html.erb
+++ b/app/views/reports/_results.html.erb
@@ -1,10 +1,11 @@
-<table>
-<h3><%= section_title%><h3>
+
+<table class="Main-box Shadow">
+<h3 class="Hilight"><%= section_title%><h3>
   <tr>
-    <th class="Hilight">Order ID</th>
-    <th class="Hilight">Date</th>
-    <th class="Hilight">Name</th>
-    <th class="Hilight">Email</th>
+    <th class="Table-item">Order ID</th>
+    <th class="Table-item">Date</th>
+    <th class="Table-item">Name</th>
+    <th class="Table-item">Email</th>
   </tr>
 <% users.each do |order|%>
   <tr>     
